<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/aisle"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<Button android:id="@+id/quiet_focus"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:focusableInTouchMode="true"
		android:background="@color/background"
		android:textSize="1sp"
		android:tag=""
		android:text=""/>
	<TextView  
	   	android:id="@+id/product_label"
		android:textSize="20sp"
	  	android:layout_height="wrap_content" 
	  	android:layout_width="fill_parent"
	  	android:focusableInTouchMode="true"
	  	android:text="@string/product_label"
	  	android:tag="@string/product_tag"
	  	android:background="@color/blue"
	  	android:textColor="@color/dkgray"
	  	android:gravity="center"
	  	android:paddingLeft="5sp"
	  	android:paddingTop="10sp"
	  	android:paddingBottom="10sp" /> 
	<TextView android:id="@+id/product_name"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:focusableInTouchMode="true"
		android:gravity="center"
		android:tag="@string/product_name"
		android:text="@string/product_name"
		android:textSize="30.0sp"
		android:layout_weight="4"/>
	<TextView android:id="@+id/price"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:focusableInTouchMode="true"
		android:gravity="center"
		android:tag="@string/price_tag"
		android:text="@string/price"
		android:textSize="30.0sp"
		android:layout_weight="4"/> 
	<TextView android:id="@+id/purchased"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:focusableInTouchMode="true"
		android:gravity="center"
		android:tag="@string/purchased_tag"
		android:text="@string/purchased"
		android:textSize="30.0sp"
		android:layout_weight="4"/>
	<Button android:id="@+id/back_to_store_button"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:focusableInTouchMode="true"
		android:tag="@string/back_to_store_button"
		android:text="@string/back_to_store_button"
		android:textSize="30.0sp"
		android:layout_weight="2"/>		
	</LinearLayout>
